# neural-astar-heat-method

./: LICENSE  README.md  environment.yml  pyproject.toml
heat_method/: __init__.py  anchor_embedding.py  dtypes.py  preprocessing.py  solver.py  validation.py  visualization.py
scripts/: common.py  compare_models.py  create_comparison_gif.py  train.py  visualize_cost_map.py
scripts/config/: create_gif.yaml  train.yaml
src/neural_astar/: __init__.py
src/neural_astar/planner/: __init__.py  astar.py  differentiable_astar.py  encoder.py  geodesic_attention.py  pq_astar.py
src/neural_astar/utils/: data.py  geometric_losses.py  training.py
tests/: astar_test.py
